--- a/rentBoot/app/src/main/res/values/strings.xml
+++ b/rentBoot/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">rentBoot</string>
+    <string name="title_dynamicfeature">Module Title</string>
 </resources>
